# yafowil.demo

./: .gitignore  Dockerfile  LICENSE.rst  Makefile  README.rst  TODO.rst  anon.cfg  base.cfg  bootstrap.sh  buildout.cfg  demo.yafowil.info.cfg  dev.cfg  docker-compose.yml  include.mk  localhost.cfg  mx.ini  pyproject.toml  requirements-mxdev.txt  requirements.txt  run.sh  run.sh.in  setup.py
scripts/: clean.sh  install.sh
src/yafowil/demo/: __init__.py  loader.py  main.pt
src/yafowil/demo/resources/: jquery-ui-1.8.16.bootstrap.css  yafowil.demo.bs5.css  yafowil.demo.css  yafowil.demo.js
src/yafowil/demo/resources/jqueryui/: README.rst  jquery-ui.css  jquery-ui.js  jquery-ui.min.css  jquery-ui.min.js
