[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yafowil.demo"
version = "4.0.0.dev0"
description = "YAFOWIL - Demo Application"
readme = "README.rst"
license = {text = "Simplified BSD and CC-BY-SA"}
authors = [{name = "Yafowil Contributors", email = "dev@conestack.org"}]
keywords = ["html", "input", "widgets", "form", "compound"]
classifiers = [
    "License :: OSI Approved :: Python Software Foundation License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
]
dependencies = [
    "sphinx",
    "Chameleon",
    "docutils",
    "yafowil>3.99",
    "yafowil.webob>1.99",
    "yafowil.yaml>2.99",
    "yafowil.bootstrap>1.99",
    "yafowil.widget.ace>1.99",
    "yafowil.widget.array>1.99",
    "yafowil.widget.autocomplete>1.99",
    # "yafowil.widget.chosen",
    "yafowil.widget.cron>1.99",
    "yafowil.widget.datetime>1.99",
    "yafowil.widget.dict>1.99",
    "yafowil.widget.image>1.99",
    "yafowil.widget.location>1.99",
    # "yafowil.widget.multiselect",
    # "yafowil.widget.richtext",
    "yafowil.widget.select2>1.99",
    "yafowil.widget.slider>1.99",
    # "yafowil.widget.wysihtml5",
]

[project.entry-points."yafowil.plugin"]
register = "yafowil.demo.loader:register"

[tool.hatch.build.targets.wheel]
packages = ["src/yafowil"]

[tool.pytest.ini_options]
consider_namespace_packages = true
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[tool.zest-releaser]
create-wheel = true
